--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,7 @@
         <module>chapter3/licensing-service-3</module>
         <module>chapter5/configserver5</module>
         <module>chapter5/licensing-service-5</module>
+        <module>chapter6/licensing-service-6</module>
+        <module>chapter6/organization-service-6</module>
     </modules>
 </project>
